added generalisations model and save and load from database
