# backend/src/models/generalisation.ts
@@ -1,17 +1,19 @@
 import Position from "./position";
 
 // A disjoint is a category object that contains multiple entities.
-interface Disjoint {
+interface Generalisation {
     // An identifier given to every single object that exists in the ER model.
     id: string;
     text: String;
 
     // Variables used for generating the shape of the object on the client.
-    pos: Position; 
+    pos: Position;
+
+    parent: string;
 
     // General-use variables.
     // A list of all the sub-entities' identifier numbers.
-    entities: number[];
+    entities: string[];
 }
 
-export default Disjoint;
+export default Generalisation;
